Fix horizontal-Scrolling Bug on Iphone
This PR fix #42

--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -32,7 +32,7 @@ html {
   min-height: 100%;
   background: var(--lightGrey);
 }
-
+html, body {  overflow-x: hidden; }
 body {
   font-family: var(--font-system);
   min-height: 100%;
